<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/app_logo"
            android:layout_toRightOf="@+id/app_logo"
            android:paddingBottom="16dip"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pdf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/pdf1_location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxLength="5000"
            android:background="@color/white"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pdf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf2"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/pdf2_location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxLength="5000"
            android:background="@color/white"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pdf3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf3"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/pdf3_location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxLength="5000"
            android:background="@color/white"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pdf4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf4"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/pdf4_location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxLength="5000"
            android:background="@color/white"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pdf5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf5"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/pdf5_location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxLength="5000"
            android:background="@color/white"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="100dp">
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnStartService"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonBackground"
        android:text="Start Download"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"/>

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:background="@color/buttonBackground"
        android:text="Stop Download"
        android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
